third_party/move/move-compiler-v2/tests/more-v1/parser/struct_native_missing_semicolon.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/struct_native_missing_semicolon.move:3:1
  │
3 │ }
  │ ^
  │ │
  │ Unexpected '}'
  │ Expected ';'
